--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,65 @@
 /*your custom CSS here*/
+
+.heading {
+width: 100%;
+height: 400px;
+background-image:url(../img/heading.jpg);
+background-repeat: no-repeat;
+background-position: center;
+background-color: #003366
+text-allign: center;
+
+.heading h1 {
+color:#fff;
+font-size:50px;
+text-allign: center;
+width:100%
+padding-top: 194px;
+}
+
+}
+
+body {
+ padding-top: 80px;
+ background-image:url(../img/metal.jpg);
+ background-repeat: no-repeat;
+background-position: center 400px;
+background-color: #999;
+}
+
+.footer {
+position:fixed;
+width:100%;
+bottom: 0;
+left: 0;
+padding:0 20px;
+border-top: 2px solid #eee;
+}
+
+
+
+.box {
+float:left;  
+width: 32%;
+margin-right: 1.5%;
+Margin-bottom: 100px;
+}
+
+.box:last-child {
+margin-right: 0;
+}
+
+.box h2 {
+
+}
+
+.box img {
+width: 100%;
+}
+
+.box a.read-more {
+display: block;
+margin-top: 5px;
+padding-top: 10px;
+border-top: 1px solid #ccc;
+}
