--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
 .heading {
 width:100%;
 height: 310px;
-background-image: url(../img/Rams_Mock16.jpg);
+background-image: url(../img/greenbay header.jpg);
 background-repeat: no-repeat;
 background-position: center;
 border-bottom: 2px solid #ffff00;
