--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,9 @@
 /*your custom CSS here*/
 
+body {
+background-color: #003699;
+}
+
 .heading {
 width:100%;
 height: 310px;
@@ -10,21 +14,7 @@ border-bottom: 2px solid #ffff00;
 }
 
 .heading h1 {
-color:#fff;
-font-size:50px;
-text-allign: center;
-width:100%
-padding-top: 194px;
-}
-
-}
-
-body {
- padding-top: 80px;
- background-image:url(../img/metal.jpg);
- background-repeat: no-repeat;
-background-position: center 400px;
-background-color: #999;
+margin: 10px o;
 }
 
 .footer {
@@ -36,53 +26,18 @@ padding:0 20px;
 border-top: 2px solid #eee;
 }
 
-
-
-div.box 1 {
-position: relative; float: left; width: 32%; height: 150px; background-color: pink; overall width 248px including 2*3px padding and 2*1px border
-
+.box {
+  color: white;
+  float: left;
+  width: 32%;
+  margin-right: 1.5%;
+  margin-bottom: 100px;
+  border-width: thick;
+  border-color: solid #ffff00;
 }
-
-div.box 2 {
-position: relative; float: left; width: 32%; background-color: azure; overall width 248px including 2*3px padding and 2*1px border; (no height)
-}
-
-div.box 3 {
-position: relative; float: left; width: 32%px; height: 125px; background-color: yellow; overall width 218px including 2*3px padding and 2*1px border
-}
-
-
-div.box 4 {
-float:left;  
-width: 32%;
-margin-right: 1.5%;
-Margin-bottom: 100px;
-height: 32%;
-top:30%;
-}
-
-div.box 5 {
-float:left;  
-width: 32%;
-height: 30%;
-margin-right: 1.5%;
-Margin-bottom: 100px;
-height: 32%;
-top:30%;
-}
-
-div.box 6 {
-float:left;  
-width: 32%;
-margin-right: 1.5%;
-Margin-bottom: 100px;
-height: 32%;
-top:30%;
-}
-
 
 .box:last-child {
-margin-right: 0;
+  margin-right: 0;
 }
 
 .box h2 {
@@ -93,25 +48,31 @@ margin-right: 0;
 width: 100%;
 }
 
-<<<<<<< HEAD
+
 a {
-  color: #4d4d33;
-  text-decoration: none; }
-  a:hover {
-color: #e0e0d1;
-    text-decoration: underline; }
+  
+color: #ffcc00;
+text-decoration: none; 
+}
+  
+a:hover {
+    
+color: black;
+text-decoration: underline; 
+}
+
+
 
 .read-more {
-  color: #000099;
-  text-decoration: underline; }
-  .read-more:hover {
-color: #4d4dff;
-    text-decoration: none; }
-=======
-.box a.read-more {
-display: block;
-margin-top: 5px;
-padding-top: 10px;
-border-top: 1px solid #ccc;
+  
+color: #ffcc00;
+
+text-decoration: underline; 
 }
->>>>>>> origin/gh-pages
+  
+.read-more:hover {
+    
+color: black
+;    
+text-decoration: none; 
+}
