--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,7 @@ background-color: #003699;
 .heading {
 width:100%;
 height: 310px;
-background-image: url(../img/greenbay header.jpg);
+background-image: url(../img/greenbay_header.jpg);
 background-repeat: no-repeat;
 background-position: center;
 border-bottom: 2px solid #ffff00;
